<?xml version="1.0"?>
<package format="3">
  <name>extract_line_segments</name>
  <version>0.1.0</version>
  <description>The extract_line_segments package</description>
  <author email="salih285@gmail.com">Salih Marangoz</author>
  <maintainer email="marco.ambrosio@polito.it">Marco Ambrosio</maintainer>
  <license>MIT</license>
  <url type="repository">https://github.com/marco-ambrosio/extract_line_segments</url>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl_msgs</build_depend>
  
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>laser_geometry</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>pcl_msgs</exec_depend>

  <!-- For PCL library -->
  <build_depend>pcl</build_depend>
  <exec_depend>pcl</exec_depend>

  <!-- Export section -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
